--- a/Pomeroy Marker Project - DHSI Limited Subset.html
+++ b/Pomeroy Marker Project - DHSI Limited Subset.html
@@ -10,9 +10,9 @@
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Pomeroy Marker Project - DHSI Limited Subset.</tw-noscript></noscript></tw-story>
 <tw-storydata name="Pomeroy Marker Project - DHSI Limited Subset" startnode="1" creator="Twine" creator-version="2.8.1" format="Harlowe" format-version="3.3.8" ifid="31DBA254-E8A5-49C8-9FAA-A9DA8CD94872" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Main " tags="" position="700,375" size="100,100">The Story of the Markers: 
-//[[New York State Historical Markers]]  York State Historical Markers, also known as Pomeroy Markers, are public signage points erected to commoemorate local historical events and  locations of significance.  //</tw-passagedata><tw-passagedata pid="2" name="Ezra Cornell" tags="De-Ruyter Person Location 19th-Century" position="900,200" size="100,100">This marker conveys (link:&quot;the story of Ezra Cornell&quot;)[the story of Ezra Cornell], based on the geographic location of his boyhood home.  
+//[[New York State Historical Markers]]  York State Historical Markers, also known as Pomeroy Markers, are public signage points erected to commoemorate local historical events and  locations of significance.  //</tw-passagedata><tw-passagedata pid="2" name="Ezra Cornell" tags="De-Ruyter Person Location 19th-Century" position="900,200" size="100,100">This marker conveys the story of Ezra Cornell, based on the geographic location of his boyhood home.  
 
-[300 Yards Up This Lane Stood His Boyhood Home In 1828 He Walked To Ithaca Where Later He Founded Cornell University. ]</tw-passagedata><tw-passagedata pid="3" name="Arrow" tags="De-Ruyter Person Location 19th-Century" position="900,400" size="100,100">Muller Hill Estate Of Louis A. Muller Who Located Here In 1808. </tw-passagedata><tw-passagedata pid="4" name="Arrow_2" tags="De-Ruyter Location Person" position="900,600" size="100,100">3½ miles site of Boyhood Home Ezra Cornell Founder Of Cornell University </tw-passagedata><tw-passagedata pid="5" name="Temperance House" tags="Cazenovia" position="1100,100" size="100,100">Served as turnpike tavern for almost 60 YRS. Built and opened by Cyrenus Bartholomew in 1815. Closed in 1872 when the Chenango R.R. opened and passed it by. </tw-passagedata><tw-passagedata pid="6" name="First County Seat" tags="Cazenovia" position="1100,300" size="100,100">This Building Erectd For Court House 1810. Courts Held 1812-17. Sold To Methodists 1818. Conference Seminary Established 1824. </tw-passagedata><tw-passagedata pid="7" name="Baptist Church" tags="Cazenovia Religion" position="1100,500" size="100,100">First In Town Of Cazenovia. Unbroken Service Since Organization July 17, 1801. This Building Erected 1815. </tw-passagedata><tw-passagedata pid="8" name="William Newton Clark" tags="Cazenovia Person 19th-Century" position="1100,700" size="100,100">1841–1912 preacher, teacher and author of books on modern theological thought. </tw-passagedata><tw-passagedata pid="9" name="Oneida Stone" tags="17th-Century Native-Peoples" position="1300,500" size="100,100">Of 1615 Oneida Means People Of The Standing Stone. In Each Village Was Such An Altar And Council Place </tw-passagedata><tw-passagedata pid="10" name="Site of Champlain Battle" tags="Fenner Location Conflict 17th-Century Native-Peoples" position="1300,700" size="100,100">Here Champlain Aided By Huron Indians Attacked The Stockaded Oneida Village Oct. 10-16, 1615 </tw-passagedata><tw-passagedata pid="11" name="Grain Pits" tags="Fenner Location Native-Peoples" position="1300,100" size="100,100">These pits are remains of community storage cellars for corn, beans and squash. USed by the Iroquois Indians 
+300 Yards Up This Lane Stood His Boyhood Home In 1828 He Walked To Ithaca Where Later He Founded Cornell University. </tw-passagedata><tw-passagedata pid="3" name="Arrow" tags="De-Ruyter Person Location 19th-Century" position="900,400" size="100,100">Muller Hill Estate Of Louis A. Muller Who Located Here In 1808. </tw-passagedata><tw-passagedata pid="4" name="Arrow_2" tags="De-Ruyter Location Person" position="900,600" size="100,100">3½ miles site of Boyhood Home Ezra Cornell Founder Of Cornell University </tw-passagedata><tw-passagedata pid="5" name="Temperance House" tags="Cazenovia" position="1100,100" size="100,100">Served as turnpike tavern for almost 60 YRS. Built and opened by Cyrenus Bartholomew in 1815. Closed in 1872 when the Chenango R.R. opened and passed it by. </tw-passagedata><tw-passagedata pid="6" name="First County Seat" tags="Cazenovia" position="1100,300" size="100,100">This Building Erectd For Court House 1810. Courts Held 1812-17. Sold To Methodists 1818. Conference Seminary Established 1824. </tw-passagedata><tw-passagedata pid="7" name="Baptist Church" tags="Cazenovia Religion" position="1100,500" size="100,100">First In Town Of Cazenovia. Unbroken Service Since Organization July 17, 1801. This Building Erected 1815. </tw-passagedata><tw-passagedata pid="8" name="William Newton Clark" tags="Cazenovia Person 19th-Century" position="1100,700" size="100,100">1841–1912 preacher, teacher and author of books on modern theological thought. </tw-passagedata><tw-passagedata pid="9" name="Oneida Stone" tags="17th-Century Native-Peoples" position="1300,500" size="100,100">Of 1615 Oneida Means People Of The Standing Stone. In Each Village Was Such An Altar And Council Place </tw-passagedata><tw-passagedata pid="10" name="Site of Champlain Battle" tags="Fenner Location Conflict 17th-Century Native-Peoples" position="1300,700" size="100,100">Here Champlain Aided By Huron Indians Attacked The Stockaded Oneida Village Oct. 10-16, 1615 </tw-passagedata><tw-passagedata pid="11" name="Grain Pits" tags="Fenner Location Native-Peoples" position="1300,100" size="100,100">These pits are remains of community storage cellars for corn, beans and squash. USed by the Iroquois Indians 
 
 &lt;img src=&quot;Grain_pits.jpg&quot; width=&quot;40%&quot;&gt;</tw-passagedata><tw-passagedata pid="12" name="Indian Spring" tags="Conflict" position="1300,300" size="100,100">This Was Outside The Area Of The Fort And Not Protected By The Palisades </tw-passagedata><tw-passagedata pid="13" name="New York State Historical Markers" tags="" position="700,500" size="100,100">Originally managed by the Department of Education&#39;s State History Office, these markers are now issued by the non-pofit &lt;a href=&quot;https://www.wgpfoundation.org/&quot;&gt;William G.Pomeroy foundation&lt;/a&gt;.  With more than 2800 markers dotting the state, there is an enourmous treasure trove of local historiy deposited in these markers, //as well as patterns about what people from the local communities have historically deemed important about their own past.  //
 
@@ -38,14 +38,93 @@ There&#39;s also a [[Map]] to explore directly from the &lt;a href=&quot;https:/
 
 
 
-</tw-passagedata><tw-passagedata pid="14" name="Buildings of Importance" tags="" position="400,600" size="100,100"></tw-passagedata><tw-passagedata pid="15" name="People of Importance" tags="" position="400,700" size="100,100"></tw-passagedata><tw-passagedata pid="16" name="Locations of Importance" tags="" position="400,800" size="100,100"></tw-passagedata><tw-passagedata pid="17" name="Locational Arrows" tags="" position="400,900" size="100,100"></tw-passagedata><tw-passagedata pid="18" name="Conflict" tags="" position="400,1000" size="100,100"></tw-passagedata><tw-passagedata pid="19" name="Native Peoples" tags="" position="400,1100" size="100,100"></tw-passagedata><tw-passagedata pid="20" name="Religion" tags="" position="400,1200" size="100,100"></tw-passagedata><tw-passagedata pid="21" name="17th Century" tags="" position="600,700" size="100,100">Explore pages that relate to 17th Century History:
+</tw-passagedata><tw-passagedata pid="14" name="Buildings of Importance" tags="" position="400,600" size="100,100">These markers conotate physical structures of importance: 
+
+(after:1s)[
+* [[Ezra Cornell]] 
+* [[Temperance House]] 
+* [[First County Seat]] 
+* [[Baptist Church]] 
+
+Back to [[New York State Historical Markers]] home.
+]</tw-passagedata><tw-passagedata pid="15" name="People of Importance" tags="" position="400,700" size="100,100">These markers address people of importance to the communitty that placed the marker:
+
+(after:1s)[
+* [[Ezra Cornell]] 
+* [[William Newton Clark]] 
+* [[Arrow]] 
+
+
+Back to [[New York State Historical Markers]] home.
+
+]
+</tw-passagedata><tw-passagedata pid="16" name="Locations of Importance" tags="" position="400,800" size="100,100">These markers define important physical geogrpahic locations.  Often these are embued with a sense of geographic place that makes them culturally relevant: 
+
+(after:1s)[
+* [[Locational Arrows]] 
+* [[Ezra Cornell]] 
+* [[Temperance House]] 
+* [[First County Seat]] 
+* [[Baptist Church]] 
+* [[Grain Pits]] 
+* [[Indian Spring]] 
+* [[Site of Champlain Battle]] 
+
+Back to [[New York State Historical Markers]] home.
+]
+</tw-passagedata><tw-passagedata pid="17" name="Locational Arrows" tags="" position="400,900" size="100,100">these markers are defined by the fact that they have no initial title, but only contain a directional arrow: 
+
+(after:1s)[
+* [[Arrow]] 
+* [[Arrow_2]] 
+
+Back to [[New York State Historical Markers]] home.
+]
+</tw-passagedata><tw-passagedata pid="18" name="Conflict" tags="" position="400,1000" size="100,100">These markers directly address conflict.  Much of this conflict involves conflict between colonial or western settlers and native peoples:
+
+(after:1s)[
+* [[Site of Champlain Battle]] 
+* [[Indian Spring]] 
+
+Back to [[New York State Historical Markers]] home.
+
+]
+</tw-passagedata><tw-passagedata pid="19" name="Native Peoples" tags="" position="400,1100" size="100,100">These are pages that directly address Native Peoples: 
+
+(after:1s)[
+* [[Oneida Stone]] 
+* [[Site of Champlain Battle]] 
+* [[Grain Pits]] 
+
+Back to [[New York State Historical Markers]] home.
+
+]</tw-passagedata><tw-passagedata pid="20" name="Religion" tags="" position="400,1200" size="100,100">These pages address religion and religous sites of importance: 
+
+(after:1s)[
+* [[Baptist Church]] 
+* [[Temperance House]] 
+
+Back to [[New York State Historical Markers]] home.
+]</tw-passagedata><tw-passagedata pid="21" name="17th Century" tags="" position="600,700" size="100,100">Explore pages that relate to 17th Century History:
 
 (after:1s)[ [[Oneida Stone]] 
-[[Site of Champlain Battle]] ]
+[[Site of Champlain Battle]] 
 
 
-</tw-passagedata><tw-passagedata pid="22" name="19th Century" tags="" position="600,800" size="100,100"></tw-passagedata><tw-passagedata pid="23" name="Map" tags="" position="750,750" size="100,100">&lt;iframe src=&quot;https://www.wgpfoundation.org/history/map/?z=3&amp;wlat=46.202928202594386&amp;wlng=-109.8042966&quot; width=&quot;600&quot; height=&quot;450&quot; style=&quot;border:0;&quot; allowfullscreen=&quot;&quot; loading=&quot;lazy&quot;&gt;&lt;/iframe&gt;
-</tw-passagedata></tw-storydata>
+Back to [[New York State Historical Markers]] home.
+]</tw-passagedata><tw-passagedata pid="22" name="19th Century" tags="" position="600,800" size="100,100">Explore pages that relate to 19th Century History:
+
+(after:1s)[
+* [[Ezra Cornell]]
+* [[Arrow]]
+* [[First County Seat]] 
+* [[Baptist Church]] 
+* [[William Newton Clark]] 
+
+Back to [[New York State Historical Markers]] home.
+]</tw-passagedata><tw-passagedata pid="23" name="Map" tags="" position="750,750" size="100,100">&lt;iframe src=&quot;https://www.wgpfoundation.org/history/map/?z=3&amp;wlat=46.202928202594386&amp;wlng=-109.8042966&quot; width=&quot;600&quot; height=&quot;450&quot; style=&quot;border:0;&quot; allowfullscreen=&quot;&quot; loading=&quot;lazy&quot;&gt;&lt;/iframe&gt;
+
+Back to [[New York State Historical Markers]] home.</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
