Update Pomeroy Marker Project - DHSI Limited Subset.html
Updated links and expanded content

--- a/Pomeroy Marker Project - DHSI Limited Subset.html
+++ b/Pomeroy Marker Project - DHSI Limited Subset.html
@@ -72,7 +72,7 @@ Back to [[New York State Historical Markers]] home.
 
 Back to [[New York State Historical Markers]] home.
 ]
-</tw-passagedata><tw-passagedata pid="17" name="Locational Arrows" tags="" position="400,900" size="100,100">these markers are defined by the fact that they have no initial title, but only contain a directional arrow: 
+</tw-passagedata><tw-passagedata pid="17" name="Locational Arrows" tags="" position="400,900" size="100,100">These markers are defined by the fact that they have no initial title, but only contain a directional arrow: 
 
 (after:1s)[
 * [[Arrow]] 
