Update Pomeroy Marker Project - DHSI Limited Subset.html

--- a/Pomeroy Marker Project - DHSI Limited Subset.html
+++ b/Pomeroy Marker Project - DHSI Limited Subset.html
@@ -12,9 +12,18 @@
 <tw-storydata name="Pomeroy Marker Project - DHSI Limited Subset" startnode="1" creator="Twine" creator-version="2.8.1" format="Harlowe" format-version="3.3.8" ifid="31DBA254-E8A5-49C8-9FAA-A9DA8CD94872" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Main " tags="" position="700,375" size="100,100">The Story of the Markers: 
 //[[New York State Historical Markers]]  York State Historical Markers, also known as Pomeroy Markers, are public signage points erected to commoemorate local historical events and  locations of significance.  //</tw-passagedata><tw-passagedata pid="2" name="Ezra Cornell" tags="De-Ruyter Person Location 19th-Century" position="900,200" size="100,100">This marker conveys the story of Ezra Cornell, based on the geographic location of his boyhood home.  
 
-300 Yards Up This Lane Stood His Boyhood Home In 1828 He Walked To Ithaca Where Later He Founded Cornell University. </tw-passagedata><tw-passagedata pid="3" name="Arrow" tags="De-Ruyter Person Location 19th-Century" position="900,400" size="100,100">Muller Hill Estate Of Louis A. Muller Who Located Here In 1808. </tw-passagedata><tw-passagedata pid="4" name="Arrow_2" tags="De-Ruyter Location Person" position="900,600" size="100,100">3½ miles site of Boyhood Home Ezra Cornell Founder Of Cornell University </tw-passagedata><tw-passagedata pid="5" name="Temperance House" tags="Cazenovia" position="1100,100" size="100,100">Served as turnpike tavern for almost 60 YRS. Built and opened by Cyrenus Bartholomew in 1815. Closed in 1872 when the Chenango R.R. opened and passed it by. </tw-passagedata><tw-passagedata pid="6" name="First County Seat" tags="Cazenovia" position="1100,300" size="100,100">This Building Erectd For Court House 1810. Courts Held 1812-17. Sold To Methodists 1818. Conference Seminary Established 1824. </tw-passagedata><tw-passagedata pid="7" name="Baptist Church" tags="Cazenovia Religion" position="1100,500" size="100,100">First In Town Of Cazenovia. Unbroken Service Since Organization July 17, 1801. This Building Erected 1815. </tw-passagedata><tw-passagedata pid="8" name="William Newton Clark" tags="Cazenovia Person 19th-Century" position="1100,700" size="100,100">1841–1912 preacher, teacher and author of books on modern theological thought. </tw-passagedata><tw-passagedata pid="9" name="Oneida Stone" tags="17th-Century Native-Peoples" position="1300,500" size="100,100">Of 1615 Oneida Means People Of The Standing Stone. In Each Village Was Such An Altar And Council Place </tw-passagedata><tw-passagedata pid="10" name="Site of Champlain Battle" tags="Fenner Location Conflict 17th-Century Native-Peoples" position="1300,700" size="100,100">Here Champlain Aided By Huron Indians Attacked The Stockaded Oneida Village Oct. 10-16, 1615 </tw-passagedata><tw-passagedata pid="11" name="Grain Pits" tags="Fenner Location Native-Peoples" position="1300,100" size="100,100">These pits are remains of community storage cellars for corn, beans and squash. USed by the Iroquois Indians 
+300 Yards Up This Lane Stood His Boyhood Home In 1828 He Walked To Ithaca Where Later He Founded Cornell University. </tw-passagedata><tw-passagedata pid="3" name="Arrow (Muller Hill)" tags="De-Ruyter Person Location 19th-Century" position="900,400" size="100,100">Muller Hill Estate Of Louis A. Muller Who Located Here In 1808. </tw-passagedata><tw-passagedata pid="4" name="Arrow (Ezra Cornell)" tags="De-Ruyter Location Person" position="900,600" size="100,100">3½ miles site of Boyhood Home Ezra Cornell Founder Of Cornell University </tw-passagedata><tw-passagedata pid="5" name="Temperance House" tags="Cazenovia" position="1100,100" size="100,100">Served as turnpike tavern for almost 60 YRS. Built and opened by Cyrenus Bartholomew in 1815. Closed in 1872 when the Chenango R.R. opened and passed it by. 
 
-&lt;img src=&quot;Grain_pits.jpg&quot; width=&quot;40%&quot;&gt;</tw-passagedata><tw-passagedata pid="12" name="Indian Spring" tags="Conflict" position="1300,300" size="100,100">This Was Outside The Area Of The Fort And Not Protected By The Palisades </tw-passagedata><tw-passagedata pid="13" name="New York State Historical Markers" tags="" position="700,500" size="100,100">Originally managed by the Department of Education&#39;s State History Office, these markers are now issued by the non-pofit &lt;a href=&quot;https://www.wgpfoundation.org/&quot;&gt;William G.Pomeroy foundation&lt;/a&gt;.  With more than 2800 markers dotting the state, there is an enourmous treasure trove of local historiy deposited in these markers, //as well as patterns about what people from the local communities have historically deemed important about their own past.  //
+&lt;img src=&quot;twine_images/Temperance_House_Caz.JPG&quot; width=&quot;40%&quot;&gt;&lt;/img&gt;</tw-passagedata><tw-passagedata pid="6" name="First County Seat" tags="Cazenovia" position="1100,300" size="100,100">This Building Erectd For Court House 1810. Courts Held 1812-17. Sold To Methodists 1818. Conference Seminary Established 1824. </tw-passagedata><tw-passagedata pid="7" name="Baptist Church" tags="Cazenovia Religion" position="1100,500" size="100,100">First In Town Of Cazenovia. Unbroken Service Since Organization July 17, 1801. This Building Erected 1815. 
+
+
+&lt;img src=&quot;twine_images/Baptist_Church_Caz.JPG&quot; width=&quot;40%&quot;&gt;&lt;/img&gt;</tw-passagedata><tw-passagedata pid="8" name="William Newton Clark" tags="Cazenovia Person 19th-Century" position="1100,700" size="100,100">1841–1912 preacher, teacher and author of books on modern theological thought. 
+
+&lt;img src=&quot;twine_images/William_Newton_Clarke.JPG&quot; width=&quot;40%&quot;&gt;&lt;/img&gt;</tw-passagedata><tw-passagedata pid="9" name="Oneida Stone" tags="17th-Century Native-Peoples" position="1300,500" size="100,100">Of 1615 Oneida Means People Of The Standing Stone. In Each Village Was Such An Altar And Council Place </tw-passagedata><tw-passagedata pid="10" name="Site of Champlain Battle" tags="Fenner Location Conflict 17th-Century Native-Peoples" position="1300,700" size="100,100">Here Champlain Aided By Huron Indians Attacked The Stockaded Oneida Village Oct. 10-16, 1615 
+
+&lt;img src=&quot;twine_images/Site_of_champlain_battle.JPG&quot; width=&quot;40%&quot;&gt;</tw-passagedata><tw-passagedata pid="11" name="Grain Pits" tags="Fenner Location Native-Peoples" position="1300,100" size="100,100">These pits are remains of community storage cellars for corn, beans and squash. USed by the Iroquois Indians 
+
+&lt;img src=&quot;twine_images/Grain_pits.jpg&quot; width=&quot;40%&quot;&gt;</tw-passagedata><tw-passagedata pid="12" name="Indian Spring" tags="Conflict" position="1300,300" size="100,100">This Was Outside The Area Of The Fort And Not Protected By The Palisades </tw-passagedata><tw-passagedata pid="13" name="New York State Historical Markers" tags="" position="700,500" size="100,100">Originally managed by the Department of Education&#39;s State History Office, these markers are now issued by the non-pofit &lt;a href=&quot;https://www.wgpfoundation.org/&quot;&gt;William G.Pomeroy foundation&lt;/a&gt;.  With more than 2800 markers dotting the state, there is an enourmous treasure trove of local historiy deposited in these markers, //as well as patterns about what people from the local communities have historically deemed important about their own past.  //
 
 Through examination of these markers in Madison County, New York, we can see several (t8n-time:1s)+(link:&quot;emergent themes that can be used for exploration.&quot;)[=
 emergent themes that can be used for exploration.  
@@ -52,7 +61,7 @@ Back to [[New York State Historical Markers]] home.
 (after:1s)[
 * [[Ezra Cornell]] 
 * [[William Newton Clark]] 
-* [[Arrow]] 
+* [[Arrow (Muller Hill)]] 
 
 
 Back to [[New York State Historical Markers]] home.
@@ -75,8 +84,8 @@ Back to [[New York State Historical Markers]] home.
 </tw-passagedata><tw-passagedata pid="17" name="Locational Arrows" tags="" position="400,900" size="100,100">These markers are defined by the fact that they have no initial title, but only contain a directional arrow: 
 
 (after:1s)[
-* [[Arrow]] 
-* [[Arrow_2]] 
+* [[Arrow (Muller Hill)]] 
+* [[Arrow (Ezra Cornell)]] 
 
 Back to [[New York State Historical Markers]] home.
 ]
@@ -116,7 +125,7 @@ Back to [[New York State Historical Markers]] home.
 
 (after:1s)[
 * [[Ezra Cornell]]
-* [[Arrow]]
+* [[Arrow (Muller Hill)]]
 * [[First County Seat]] 
 * [[Baptist Church]] 
 * [[William Newton Clark]] 
